<resources>
    <string name="app_name">Army Gyan</string>

    <string name="sample_about_us"><![CDATA[The ConstraintLayout is a powerful new class, imagine a RelativeLayout on steroids - yea, that’s the ConstraintLayout. It allows us to lay out child views using ‘constraints’ to define position based relationships between different views found in our layout.
The aim of the ConstraintLayout is to help reduce the number of nested views, which will improve the performance of our layout files. The layout class also makes it easier for us to define layouts than when using a RelativeLayout as we can now anchor any side of a view with any side of another, rather than having to place a whole view to any side of another.\n\n The ConstraintLayout is a powerful new class, imagine a RelativeLayout on steroids - yea, that’s the ConstraintLayout. It allows us to lay out child views using ‘constraints’ to define position based relationships between different views found in our layout.
The aim of the ConstraintLayout is to help reduce the number of nested views, which will improve the performance of our layout files. The layout class also makes it easier for us to define layouts than when using a RelativeLayout as we can now anchor any side of a view with any side of another, rather than having to place a whole view to any side of another. ]]></string>
    <string name="title_about_us">About Us</string>
    <string name="title_chapters">Chapters</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification">Notification</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_study_material">Study Material</string>
    <string name="title_play_quiz">Play Quiz</string>
    <string name="title_welcome">Jai Hind,</string>
    <string name="title_welcome_ii">boost your knowledge</string>
    <string name="hint_usr_name">Username</string>
    <string name="hint_usr_email">Email</string>
    <string name="hint_usr_gender">Gender</string>
    <string name="hint_usr_type">User type</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="title_select_quiz">Select Quiz</string>
    <string name="title_result">Your Result</string>
    <string name="title_over_all_performance">Overall performance</string>
    <string name="title_total_ques">Total Questions :</string>
    <string name="title_total_ques_attpmt">Total Questions attempted :</string>
    <string name="title_total_correct_ans">Total Correct Answers :</string>
    <string name="title_total_wrong_ans">Total Wrong Answers :</string>
    <string name="title_ur_score">Your Score :</string>
    <string name="action_ok">OK</string>
    <string name="action_show_answer">Answers</string>
    <string name="title_language">Language</string>
    <string name="title_term_and_condition">Terms and conditions</string>
    <string name="title_invite_friend">Invite a friend</string>
    <string name="title_sign_out">Sign out</string>
    <string name="title_english">English</string>
    <string name="title_hindi">Hindi</string>
    <string name="title_no_of_ques">No of Questions :</string>
    <string name="title_level">Level :</string>
    <string name="title_question">Question</string>
    <string name="title_show_ques">Show Q.</string>
    <string name="level_beginner">Beginner</string>
    <string name="level_medium">Medium</string>
    <string name="level_expert">Expert</string>


    <string name="title_change_language">App needs to be restarted to reflect changes !</string>
    <string name="action_yes">YES</string>
    <string name="action_no">NO</string>
    <string name="title_log_out">Are you sure you would like to logout ?</string>
    <string name="title_show_results">Show Results</string>
    <string name="title_restart">Restart</string>
    <string name="title_quit_quiz">Quit Quiz</string>

    <string name="title_slogan">Service is our duty</string>
    <string name="action_back">Back</string>
    <string name="alert_no_category">No Category</string>
    <string name="alert_no_chapters">No Chapters</string>
    <string name="alert_no_quiz">No Quiz</string>
    <string name="title_views">views</string>
    <string name="title_admin">BY ADMIN</string>
    <string name="title_total_chapters">Total chapters :</string>
    <string name="title_topics">Topics</string>
    <string name="title_free">FREE</string>
    <string name="title_excellent">EXCELLENT</string>
    <string name="title_good">GOOD</string>
    <string name="title_average">AVERAGE</string>
    <string name="title_poor">WORK HARD</string>

    <string name="title_answers">Answers</string>
    <string name="title_instruction">Instructions</string>
    <string name="title_time_over">Time is over</string>
    <string name="alert_no_notification">No Notification</string>
    <string name="notif_new_quiz">New Quiz ! Try out this and increase your knowledge</string>
    <string name="notif_new_chapter">New Chapter ! Try out this and increase your knowledge</string>

    <string name="title_previous">Prev</string>
    <string name="title_next">Next</string>
    <string name="title_explanation"><u>Explanation</u></string>
    <string name="alert_no_quiz_question">कोई प्रश्न नहीं</string>
    <string name="alert_one_minute">1 minute remaining</string>
    <string name="question">Question</string>
    <string name="alert_no_explanation">No Explanation</string>
    <string name="title_explaination">Explanation</string>
    <string name="title_new">NEW</string>
    <string name="title_start_quiz">Start Quiz</string>
    <string name="title_small">Small</string>
    <string name="title_medium">Medium</string>
    <string name="title_large">Large</string>
    <string name="title_finish">Finish</string>
    <string name="title_next_"><![CDATA[Next >>]]></string>
    <string name="title_previous_"><![CDATA[<< Previous]]></string>
    <string name="slash">/</string>
    <string name="alert_back_press">Click back again to exit</string>
    <string name="title_share_with">Share with</string>
    <string name="alert_google_play_services">install google play services</string>
    <string name="title_select_your_language">Select Language</string>
    <string name="alert_no_internet">No Internet</string>
    <string name="alert_internet">Internet Available</string>
    <string name="default_notification_channel_id">channel_one</string>
    <string name="minutes">min</string>

    <string name="title_i">\u2022 The quiz has</string>
    <string name="title_ii">\u2022 Each question carries 2 mark</string>
    <string name="title_iii">\u2022 0.5 negative marking for wrong answer</string>
    <string name="title_iv">\u2022 Total duration is</string>
    <string name="title_v">\u2022 Select the answer only at once</string>
    <string name="title_minutes">minutes</string>
    <string name="title_questions">questions</string>
    <string name="title_version">version :</string>
    <string name="action_google_sign_in" translatable="false">Google Sign In</string>
    <string name="uri_google_market" translatable="false">market://details?id=</string>
    <string name="uri_google_store" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <string name="action_save_result_in_gallery">Save result in Gallery</string>
    <string name="alert_result_saved">Result is saved in gallery</string>
    <string name="alert_cannot_create_output">cannot create output</string>
    <string name="label_storage_access">Storage access is needed</string>
    <string name="action_settings">Settings</string>

</resources>
