<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quizz.view.ScoreCardFragment">

    <TextView
        android:id="@+id/tv_header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/title_result"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textColor="@color/colorGrey"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardview"
        app:layout_constraintEnd_toEndOf="@+id/cardview"
        app:layout_constraintStart_toStartOf="@+id/cardview" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
        app:cardBackgroundColor="@color/colorBlue"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="@dimen/_15sdp"
        card_view:cardElevation="0dp"
        card_view:contentPadding="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1AFFFFFF">

            <TextView
                android:id="@+id/tv_ques_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lineSpacingExtra="0sp"
                android:maxLines="1"
                app:layout_constraintHorizontal_bias=".2"
                android:text="@string/title_over_all_performance"
                android:textColor="@color/colorCyan"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_over_all_performance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lineSpacingExtra="0sp"
                android:maxLines="1"
                android:text="----"
                android:textColor="@color/colorOrange"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_ques_no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".8"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/iv_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/dotted_thin_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ques_no" />

            <TextView
                android:id="@+id/tv_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/title_total_ques"
                android:textColor="@color/colorLightWhite"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_line" />


            <TextView
                android:id="@+id/tv_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/title_total_ques_attpmt"
                android:textColor="@color/colorLightWhite"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_one"
                app:layout_constraintTop_toBottomOf="@+id/tv_one" />

            <TextView
                android:id="@+id/tv_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:ellipsize="end"
                android:lineSpacingExtra="0sp"
                android:maxLines="3"
                android:minLines="1"
                android:padding="@dimen/_5sdp"
                android:text="@string/title_total_correct_ans"
                android:textColor="@color/colorLightWhite"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_two"
                app:layout_constraintTop_toBottomOf="@+id/tv_two" />

            <TextView
                android:id="@+id/tv_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:ellipsize="end"
                android:lineSpacingExtra="0sp"
                android:maxLines="3"
                android:minLines="1"
                android:padding="@dimen/_5sdp"
                android:text="@string/title_total_wrong_ans"
                android:textColor="@color/colorLightWhite"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_three"
                app:layout_constraintTop_toBottomOf="@+id/tv_three" />


            <TextView
                android:id="@+id/tv_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:ellipsize="end"
                android:lineSpacingExtra="0sp"
                android:maxLines="3"
                android:minLines="1"
                android:padding="@dimen/_5sdp"
                android:text="@string/title_ur_score"
                android:textColor="@color/colorLightWhite"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_four"
                app:layout_constraintTop_toBottomOf="@+id/tv_four" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_five" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_right_cut"
                app:layout_constraintBottom_toBottomOf="@+id/iv_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_line" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_left_cut"
                app:layout_constraintBottom_toBottomOf="@+id/iv_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_line" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_tot_ques"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:padding="@dimen/_5sdp"
                android:text="00"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_line" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_tot_attempted_ques"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="00"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_two"
                app:layout_constraintStart_toStartOf="@+id/tv_tot_ques"
                app:layout_constraintTop_toTopOf="@+id/tv_two" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_tot_correct_ques"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="00"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_three"
                app:layout_constraintStart_toStartOf="@+id/tv_tot_attempted_ques"
                app:layout_constraintTop_toTopOf="@+id/tv_three" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_tot_wrong_ques"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="00"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_four"
                app:layout_constraintStart_toStartOf="@+id/tv_tot_correct_ques"
                app:layout_constraintTop_toTopOf="@+id/tv_four" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_your_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="00"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_five"
                app:layout_constraintStart_toStartOf="@+id/tv_tot_wrong_ques"
                app:layout_constraintTop_toTopOf="@+id/tv_five" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fbtn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="0dp"
        android:paddingStart="0dp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="0dp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/action_back"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
        app:backgroundTint="@color/colorLightBlue"
        app:elevation="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@+id/cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:rippleColor="@color/colorWhite" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fbtn_show_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="0dp"
        android:paddingStart="0dp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="0dp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/action_show_answer"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:backgroundTint="@color/colorGreen"
        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
        app:elevation="@dimen/_5sdp"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintBottom_toBottomOf="@+id/cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:rippleColor="@color/colorWhite" />


</androidx.constraintlayout.widget.ConstraintLayout>